test/Fail/IdiomBracketsMismatch.agda
module IdiomBracketsMismatch where

_ = ⦇ f x y z |)
_ = (| f x y z ⦈
