test/Fail/IdiomBracketsMismatch.err
IdiomBracketsMismatch.agda:3.15-17: error: [MismatchedBrackets]
Idiom brackets opened with '⦇' must be closed with '⦈'.

IdiomBracketsMismatch.agda:4.16-17: error: [MismatchedBrackets]
Idiom brackets opened with '(|' must be closed with '|)'.

IdiomBracketsMismatch.agda:3.5-17: error: [IdiomBracketError]
pure needs to be in scope to use idiom brackets ⦇ ... ⦈
when scope checking ⦇ f x y z ⦈
